--- a/package.json
+++ b/package.json
@@ -48,14 +48,18 @@
     "gulp-uglify": "^1.5.4",
     "gulp-util": "^3.0.7",
     "jshint": "^2.9.2",
+    "lodash._baseassign": "^3.2.0",
+    "lodash._createassigner": "^3.1.1",
+    "lru-cache": "^4.1.1",
     "mocha": "^2.5.3",
+    "mysql": "^2.5.5",
     "nodemon": "^1.9.2",
     "sat": "^0.6.0",
+    "sigmund": "^1.0.1",
     "simple-quadtree": "^0.1.3",
     "socket.io": "^1.7.4",
     "socket.io-client": "^1.7.4",
     "webpack": "^1.4.0",
-    "webpack-stream": "^3.2.0",
-    "mysql": "^2.5.5"
+    "webpack-stream": "^3.2.0"
   }
 }
